# insurance-claims-ai

./: .gitignore  CHANGELOG.md  README.md  harness-pipeline.yaml  package-lock.json  package.json
.claude/: MEMORY.md  dashboard.html
apps/agent/: .dockerignore  .env.example  Dockerfile  main.py  pipeline.py  pyproject.toml
apps/agent/agents/: __init__.py  claim_validation.py  decision.py  document_verification.py  fraud_detection.py
apps/agent/models/: claim.py
apps/agent/services/: bigquery_client.py  gcs_client.py  redis_client.py
apps/agent/tests/: conftest.py  test_main.py  test_models.py  test_pipeline.py
apps/web/: .dockerignore  Dockerfile  next.config.ts  package.json  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/claims/: route.ts
apps/web/src/app/api/claims/[id]/: route.ts
apps/web/src/app/api/claims/[id]/approve/: route.ts
apps/web/src/app/claims/[id]/: ClaimDetailClient.tsx  page.tsx
apps/web/src/app/claims/new/: page.tsx
apps/web/src/app/review/[id]/: HitlReviewClient.tsx  page.tsx
apps/web/src/components/: AgentThinkingFeed.tsx  ClaimCard.tsx  ClaimForm.tsx  FraudBadge.tsx  StatusTimeline.tsx  index.ts
apps/web/src/lib/: gcp-auth.ts
infra/bq-schemas/: agent_analyses.json  audit_log.json  human_approval_requests.json  insurance_claims.json  provision.sh
infra/terraform/: bigquery.tf  iam.tf  main.tf  outputs.tf  secrets.tf  terraform.tfvars.example  variables.tf  versions.tf
mock-data/claims/: claim-001.json  claim-002.json  claim-003.json
(+1 files in other folders)
